// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Function Reflection should compile function returning a function: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionReturningAFunction()

**functionReturningAFunction**(): \\<\`T\`\\>(\`x\`) => \`boolean\`

Comments for function

## Returns

\`Function\`

> ### Type parameters
>
> • **T**
>
> ### Parameters
>
> • **x**: \`string\`
>
> ### Returns
>
> \`boolean\`
>

## Source

[functions.ts:154](http://source-url)
"
`;

exports[`Function Reflection should compile function returning a function: (Output File Strategy "members") (Option Group "2") 1`] = `
"# functionReturningAFunction()

\`\`\`ts
functionReturningAFunction(): <T>(x) => boolean
\`\`\`

Comments for function

## Returns

\`Function\`

> ### Type parameters
>
> | Type parameter |
> | :------ |
> | \`T\` |
>
> ### Parameters
>
> | Parameter | Type |
> | :------ | :------ |
> | \`x\` | \`string\` |
>
> ### Returns
>
> \`boolean\`
>

## Source

[functions.ts:154](http://source-url)
"
`;

exports[`Function Reflection should compile function returning a promise: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionReturningAPromise()

**functionReturningAPromise**(): [\`Promise\`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)\\<\`Object\`\\>

Comments for function

## Returns

[\`Promise\`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)\\<\`Object\`\\>

Return comments

> ### prop
>
> **prop**: \`string\`
>

## Source

[functions.ts:162](http://source-url)
"
`;

exports[`Function Reflection should compile function returning a promise: (Output File Strategy "members") (Option Group "2") 1`] = `
"# functionReturningAPromise()

\`\`\`ts
functionReturningAPromise(): Promise<Object>
\`\`\`

Comments for function

## Returns

[\`Promise\`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)\\<\`Object\`\\>

Return comments

> | Member | Type |
> | :------ | :------ |
> | \`prop\` | \`string\` |
>

## Source

[functions.ts:162](http://source-url)
"
`;

exports[`Function Reflection should compile function returning a string: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionReturningAString()

**functionReturningAString**(): \`string\`

Comments for function

## Returns

\`string\`

Return comments

## Source

[functions.ts:135](http://source-url)
"
`;

exports[`Function Reflection should compile function returning a string: (Output File Strategy "members") (Option Group "2") 1`] = `
"# functionReturningAString()

\`\`\`ts
functionReturningAString(): string
\`\`\`

Comments for function

## Returns

\`string\`

Return comments

## Source

[functions.ts:135](http://source-url)
"
`;

exports[`Function Reflection should compile function returning a union: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionReturningAUnionType()

**functionReturningAUnionType**(): \`string\` \\| \`boolean\` \\| \`"string1"\` \\| \`"string2"\`

Comments for function

## Returns

\`string\` \\| \`boolean\` \\| \`"string1"\` \\| \`"string2"\`

Return comments

## Source

[functions.ts:143](http://source-url)
"
`;

exports[`Function Reflection should compile function returning a union: (Output File Strategy "members") (Option Group "2") 1`] = `
"# functionReturningAUnionType()

\`\`\`ts
functionReturningAUnionType(): string | boolean | "string1" | "string2"
\`\`\`

Comments for function

## Returns

\`string\` \\| \`boolean\` \\| \`"string1"\` \\| \`"string2"\`

Return comments

## Source

[functions.ts:143](http://source-url)
"
`;

exports[`Function Reflection should compile function returning an object: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionReturningAnObject()

**functionReturningAnObject**(): \`Object\`

Comments for function

## Returns

\`Object\`

Return comments

### x

**x**: \`number\` = \`1\`

### y

**y**: \`number\` = \`2\`

## Default

\`\`\`ts
{}
\`\`\`

## Source

[functions.ts:127](http://source-url)
"
`;

exports[`Function Reflection should compile function returning an object: (Output File Strategy "members") (Option Group "2") 1`] = `
"# functionReturningAnObject()

\`\`\`ts
functionReturningAnObject(): Object
\`\`\`

Comments for function

## Returns

\`Object\`

Return comments

| Member | Type |
| :------ | :------ |
| \`x\` | \`number\` |
| \`y\` | \`number\` |

## Default

\`\`\`ts
{}
\`\`\`

## Source

[functions.ts:127](http://source-url)
"
`;

exports[`Function Reflection should compile function with a parameter: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: basicFunction()

**basicFunction**(\`someParam\`): \`number\`

This is a function that is assigned to a variable.

## Parameters

• **someParam**: \`number\`

This is some numeric parameter.

## Returns

\`number\`

## Source

[functions.ts:10](http://source-url)
"
`;

exports[`Function Reflection should compile function with a parameter: (Output File Strategy "members") (Option Group "2") 1`] = `
"# basicFunction()

\`\`\`ts
basicFunction(someParam): number
\`\`\`

This is a function that is assigned to a variable.

## Parameters

| Parameter | Type | Description |
| :------ | :------ | :------ |
| \`someParam\` | \`number\` | This is some numeric parameter. |

## Returns

\`number\`

## Source

[functions.ts:10](http://source-url)
"
`;

exports[`Function Reflection should compile function with default parameters: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionWithDefaultParameters()

**functionWithDefaultParameters**(\`valueA\`, \`valueB\`, \`valueC\`, \`valueD\`, \`valueE\`, \`valueF\`): \`string\`

This is a function with a parameter that has a default value.

## Parameters

• **valueA**: \`string\`= \`'defaultValue'\`

A parameter with a default string value.

• **valueB**: \`number\`= \`100\`

A parameter with a default numeric value.

• **valueC**: \`number\`= \`Number.NaN\`

A parameter with a default NaN value.

• **valueD**: \`boolean\`= \`true\`

A parameter with a default boolean value.

• **valueE**: \`boolean\`= \`true\`

A parameter with a default null value.

• **valueF**: \`string\`= \`'<foo>'\`

## Returns

\`string\`

## Source

[functions.ts:23](http://source-url)
"
`;

exports[`Function Reflection should compile function with default parameters: (Output File Strategy "members") (Option Group "2") 1`] = `
"# functionWithDefaultParameters()

\`\`\`ts
functionWithDefaultParameters(
   valueA, 
   valueB, 
   valueC, 
   valueD, 
   valueE, 
   valueF): string
\`\`\`

This is a function with a parameter that has a default value.

## Parameters

| Parameter | Type | Default value | Description |
| :------ | :------ | :------ | :------ |
| \`valueA\` | \`string\` | \`'defaultValue'\` | A parameter with a default string value. |
| \`valueB\` | \`number\` | \`100\` | A parameter with a default numeric value. |
| \`valueC\` | \`number\` | \`Number.NaN\` | A parameter with a default NaN value. |
| \`valueD\` | \`boolean\` | \`true\` | A parameter with a default boolean value. |
| \`valueE\` | \`boolean\` | \`true\` | A parameter with a default null value. |
| \`valueF\` | \`string\` | \`'<foo>'\` | - |

## Returns

\`string\`

## Source

[functions.ts:23](http://source-url)
"
`;

exports[`Function Reflection should compile function with multiple signatures: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionWithMultipleSignatures()

## functionWithMultipleSignatures(value)

**functionWithMultipleSignatures**(\`value\`): \`string\`

This is the first signature of a function with multiple signatures.

### Parameters

• **value**: \`string\`

The name value.

### Returns

\`string\`

### Source

[functions.ts:102](http://source-url)

## functionWithMultipleSignatures(value)

**functionWithMultipleSignatures**(\`value\`): \`string\`

This is the second signature of a function with multiple signatures.

### Parameters

• **value**

An object containing the name value.

• **value\\.name**: \`string\`

A value of the object.

### Returns

\`string\`

### Source

[functions.ts:110](http://source-url)
"
`;

exports[`Function Reflection should compile function with multiple signatures: (Output File Strategy "members") (Option Group "2") 1`] = `
"# functionWithMultipleSignatures()

## functionWithMultipleSignatures(value)

\`\`\`ts
functionWithMultipleSignatures(value): string
\`\`\`

This is the first signature of a function with multiple signatures.

### Parameters

| Parameter | Type | Description |
| :------ | :------ | :------ |
| \`value\` | \`string\` | The name value. |

### Returns

\`string\`

### Source

[functions.ts:102](http://source-url)

## functionWithMultipleSignatures(value)

\`\`\`ts
functionWithMultipleSignatures(value): string
\`\`\`

This is the second signature of a function with multiple signatures.

### Parameters

| Parameter | Type | Description |
| :------ | :------ | :------ |
| \`value\` | \`Object\` | An object containing the name value. |
| \`value.name\` | \`string\` | A value of the object. |

### Returns

\`string\`

### Source

[functions.ts:110](http://source-url)
"
`;

exports[`Function Reflection should compile function with named params: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionWithNamedParams()

**functionWithNamedParams**(\`__namedParameters\`, \`anotherParam\`): \`void\`

## Parameters

• **\\_\\_namedParameters**= \`{}\`

various options

• **\\_\\_namedParameters\\.bar?**: \`number\`= \`43\`

• **\\_\\_namedParameters\\.foo?**: \`number\`= \`42\`

• **anotherParam**: \`string\`

Another param comment

## Returns

\`void\`

## Source

[functions.ts:75](http://source-url)
"
`;

exports[`Function Reflection should compile function with named params: (Output File Strategy "members") (Option Group "2") 1`] = `
"# functionWithNamedParams()

\`\`\`ts
functionWithNamedParams(__namedParameters, anotherParam): void
\`\`\`

## Parameters

| Parameter | Type | Description |
| :------ | :------ | :------ |
| \`__namedParameters\` | \`Object\` | various options |
| \`__namedParameters.bar\`? | \`number\` | - |
| \`__namedParameters.foo\`? | \`number\` | - |
| \`anotherParam\` | \`string\` | Another param comment |

## Returns

\`void\`

## Source

[functions.ts:75](http://source-url)
"
`;

exports[`Function Reflection should compile function with nested parameters: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionWithNestedParameters()

**functionWithNestedParameters**(\`params\`, \`context\`, \`somethingElse\`?): \`boolean\`

Some nested params.

## Parameters

• **params**

The parameters passed to the method.

• **params\\.name**: \`string\`

The name of the new group.

• **params\\.nestedObj**

A nested object.

• **params\\.nestedObj\\.name?**: \`string\`

• **params\\.nestedObj\\.obj?**

• **params\\.nestedObj\\.obj\\.name?**

• **params\\.nestedObj\\.value?**: \`number\`

• **params\\.parent?**: \`number\`

• **context?**: \`any\`

The context of the method call.

• **somethingElse?**: \`string\`

## Returns

\`boolean\`

## Source

[functions.ts:54](http://source-url)
"
`;

exports[`Function Reflection should compile function with nested parameters: (Output File Strategy "members") (Option Group "2") 1`] = `
"# functionWithNestedParameters()

\`\`\`ts
functionWithNestedParameters(
   params, 
   context, 
   somethingElse?): boolean
\`\`\`

Some nested params.

## Parameters

| Parameter | Type | Description |
| :------ | :------ | :------ |
| \`params\` | \`Object\` | The parameters passed to the method. |
| \`params.name\` | \`string\` | The name of the new group. |
| \`params.nestedObj\` | \`Object\` | A nested object. |
| \`params.nestedObj.name\`? | \`string\` | - |
| \`params.nestedObj.obj\`? | \`Object\` | - |
| \`params.nestedObj.obj.name\`? | () => \`void\` | - |
| \`params.nestedObj.value\`? | \`number\` | - |
| \`params.parent\`? | \`number\` | - |
| \`context\`? | \`any\` | The context of the method call. |
| \`somethingElse\`? | \`string\` | - |

## Returns

\`boolean\`

## Source

[functions.ts:54](http://source-url)
"
`;

exports[`Function Reflection should compile function with optional parameters: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionWithOptionalParameters()

**functionWithOptionalParameters**(\`firstParamWithDefault\`, \`requiredParam\`, \`optionalParam\`?, \`paramWithDefault\`?): \`void\`

This is a function with a parameters.

## Parameters

• **firstParamWithDefault**: \`boolean\`= \`true\`

• **requiredParam**: \`string\`

A normal parameter.

• **optionalParam?**: \`string\`

An optional parameter.

• **paramWithDefault?**: \`number\`= \`0\`

## Returns

\`void\`

## Source

[functions.ts:40](http://source-url)
"
`;

exports[`Function Reflection should compile function with optional parameters: (Output File Strategy "members") (Option Group "1") 2`] = `
"# Function: functionWithOptionalParameters()

**functionWithOptionalParameters**(\`firstParamWithDefault\`, \`requiredParam\`, \`optionalParam\`?, \`paramWithDefault\`?): \`void\`

This is a function with a parameters.

## Parameters

• **firstParamWithDefault**: \`boolean\`= \`true\`

• **requiredParam**: \`string\`

A normal parameter.

• **optionalParam?**: \`string\`

An optional parameter.

• **paramWithDefault?**: \`number\`= \`0\`

## Returns

\`void\`

## Source

[functions.ts:40](http://source-url)
"
`;

exports[`Function Reflection should compile function with optional parameters: (Output File Strategy "members") (Option Group "2") 1`] = `
"# functionWithOptionalParameters()

\`\`\`ts
functionWithOptionalParameters(
   firstParamWithDefault, 
   requiredParam, 
   optionalParam?, 
   paramWithDefault?): void
\`\`\`

This is a function with a parameters.

## Parameters

| Parameter | Type | Default value | Description |
| :------ | :------ | :------ | :------ |
| \`firstParamWithDefault\` | \`boolean\` | \`true\` | - |
| \`requiredParam\` | \`string\` | \`undefined\` | A normal parameter. |
| \`optionalParam\`? | \`string\` | \`undefined\` | An optional parameter. |
| \`paramWithDefault\`? | \`number\` | \`0\` | - |

## Returns

\`void\`

## Source

[functions.ts:40](http://source-url)
"
`;

exports[`Function Reflection should compile function with optional parameters: (Output File Strategy "members") (Option Group "2") 2`] = `
"# functionWithOptionalParameters()

\`\`\`ts
functionWithOptionalParameters(
   firstParamWithDefault, 
   requiredParam, 
   optionalParam?, 
   paramWithDefault?): void
\`\`\`

This is a function with a parameters.

## Parameters

| Parameter | Type | Default value | Description |
| :------ | :------ | :------ | :------ |
| \`firstParamWithDefault\` | \`boolean\` | \`true\` | - |
| \`requiredParam\` | \`string\` | \`undefined\` | A normal parameter. |
| \`optionalParam\`? | \`string\` | \`undefined\` | An optional parameter. |
| \`paramWithDefault\`? | \`number\` | \`0\` | - |

## Returns

\`void\`

## Source

[functions.ts:40](http://source-url)
"
`;

exports[`Function Reflection should compile function with rest params: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionWithRestParams()

**functionWithRestParams**(\`param\`, ...\`restParams\`): \`boolean\`

Function with reset parmas

## Parameters

• **param**: \`string\`

• ...**restParams**: \`string\`[]

## Returns

\`boolean\`

## Source

[functions.ts:86](http://source-url)
"
`;

exports[`Function Reflection should compile function with rest params: (Output File Strategy "members") (Option Group "2") 1`] = `
"# functionWithRestParams()

\`\`\`ts
functionWithRestParams(param, ...restParams): boolean
\`\`\`

Function with reset parmas

## Parameters

| Parameter | Type |
| :------ | :------ |
| \`param\` | \`string\` |
| ...\`restParams\` | \`string\`[] |

## Returns

\`boolean\`

## Source

[functions.ts:86](http://source-url)
"
`;

exports[`Function Reflection should compile function with type parameters: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionWithTypeParameters()

**functionWithTypeParameters**\\<\`T\`, \`Item\`\\>(): \`boolean\`

Function with type parameters

## Type parameters

• **T**

Comments for T

• **Item** = \`string\` \\| \`boolean\`

## Returns

\`boolean\`

## Source

[functions.ts:95](http://source-url)
"
`;

exports[`Function Reflection should compile function with type parameters: (Output File Strategy "members") (Option Group "2") 1`] = `
"# functionWithTypeParameters()

\`\`\`ts
functionWithTypeParameters<T, Item>(): boolean
\`\`\`

Function with type parameters

## Type parameters

| Type parameter | Value | Description |
| :------ | :------ | :------ |
| \`T\` | - | Comments for T |
| \`Item\` | \`string\` \\| \`boolean\` | - |

## Returns

\`boolean\`

## Source

[functions.ts:95](http://source-url)
"
`;
